--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <declare-styleable name="MaxHeightScrollView">
+        <attr name="mhs_maxHeight" format="dimension" />
+    </declare-styleable>
+
 </resources>
