--- a/app/src/main/res/layout/add_event.xml
+++ b/app/src/main/res/layout/add_event.xml
@@ -197,6 +197,19 @@
         android:textSize="8pt" />
 
     <Button
+        android:id="@+id/delete"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="180dp"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@id/submit"
+        android:layout_marginBottom="19dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Delete" />
+
+    <Button
         android:id="@+id/submit"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="180dp"
@@ -204,7 +217,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="19dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Submit" />
 
     <ImageButton
